<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>games_vision</name>
  <version>0.0.0</version>
  <description>
    The games_vision package is made of different games for HRI based on vision.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- ROS dependencies -->
  <depend>cvstage</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>people_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <!-- AD:
      these should be in the dependencies.rosinstall of the package -->
  <depend>music2sound</depend>

  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
